deployments/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: entry-route
  namespace: default
spec:
  gateways:
  - knative-ingress-gateway.knative-serving.svc.cluster.local
  hosts:
  - example.com
  http:
  - match:
    - uri:
        prefix: "/list"
    rewrite:
      authority: r3x-rubix-list.default.example.com
    route:
      - destination:
          host: knative-ingressgateway.istio-system.svc.cluster.local
        weight: 100
  - match:
    - uri:
        prefix: "/add"
    rewrite:
      authority: r3x-rubix-create.default.example.com
    route:
      - destination:
          host: knative-ingressgateway.istio-system.svc.cluster.local
        weight: 100
  - match:
    - uri:
        prefix: "/delete"
    rewrite:
      authority: r3x-rubix-delete.default.example.com
    route:
      - destination:
          host: knative-ingressgateway.istio-system.svc.cluster.local
        weight: 100
- match:
    - uri:
        prefix: "/dicate"
    rewrite:
      authority: r3x-rubix-dictate.default.example.com
    route:
      - destination:
          host: knative-ingressgateway.istio-system.svc.cluster.local
        weight: 100
